--- a/classevirtuelle072020.Rmd
+++ b/classevirtuelle072020.Rmd
@@ -432,12 +432,23 @@ class: inverse, center, middle
 ### Les .red[acteurs publics] de l'open data
 
 * **DINUM - Etalab** : Crée en 2011, la mission coordonne la politique d’ouverture et de partage des données publiques, et anime la plateforme nationale data.gouv.fr 
-* **DITP** : Expérimente l’intelligence artificielle dans les administrations avec Etalab et la DINSIC
+* **DITP** : Expérimente l’intelligence artificielle dans les administrations avec Etalab et la DINUM
 * **DINUM** : Soutient la diffusion de la culture numérique (utilisations des données, recours aux méthodes agiles) et la coopération avec la société civile et les écosystèmes innovants (open data, gouvernement ouvert). 
 * **Mission Société Numérique de l'Agence du Numérique** : Structure les acteurs de l’accompagnement au numérique et les stratégies numériques des territoires, dont l'open data fait partie.
 
-Au ministère de la Culture :
-* **DIN** (Département de l'innovation numérique) : chargé d’identifier au ministère et dans les établissements culturels, les informations produites dans le cadre des missions de service public, de coordonner leur recensement, leur qualification, et la mise à disposition en données ouvertes qui ont vocation à être librement accessibles et gratuitement réutilisables. ( _n’hésitez pas à le contacter pour toute question sur l'Open data_ )
+---
+
+### Au .red[ministère de la Culture]
+
+Le **DIN**, département de l'innovation numérique, au sein du Secrétariat général, est depuis 2011 le coordinateur ministériel Open data pour le ministère de la culture et ses opérateurs auprès de la mission Etalab (DINUM). 
+
+Il est chargé :
+*	de coordonner le recensement et la qualification des informations publiques, et l’ouverture des données susceptibles d’être mises à disposition
+*	d’accompagner les producteurs de données dans l’ouverture de leurs données publiques
+*	d’administrer la plateforme data.culture.gouv.fr
+*	Il est le point de contact entre usagers et services producteurs de données publiques, en relayant toutes les questions posées sur data.gouv.fr et sur data.culture.gouv.fr
+
+_n’hésitez pas à le contacter pour toute question sur l'Open data_
 
 ---
 
@@ -667,7 +678,7 @@ http://www.vie-publique.fr/actualite/dossier/loi-internet/republique-numerique-q
 > Les administrations devront publier en ligne dans un standard ouvert leurs principaux documents, y compris leurs codes sources, ainsi que leurs bases de données qui présentent un intérêt économique, social, sanitaire ou environnemental. 
 
 
-Cette obligation concerne toutes les *administrations*, établissements publics, collectivités et organismes privés chargés d’un service public, à deux conditions : être dôté d'au moins **50 agents** et, pour les collectivités locales, concerner au moins **3500 habitants**.
+Cette obligation concerne toutes les *administrations*, établissements publics, collectivités et organismes privés chargés d’un service public, à deux conditions : compter au moins **50 agents** et **3500 habitants**.
 
 ---
 ### .red[Le périmètre] de l'open data par défaut 
@@ -1040,7 +1051,7 @@ Ce schéma, réalisé par l'association [DémocratieOuverte](https://democratieo
 
 En septembre 2011, un partenariat multilatéral s'est créé afin de promouvoir le gouvernement ouvert et traduire ses valeurs en des actions gouvernementales concrètes : **le partenariat pour un gouvernement ouvert** (PGO), aussi appelé **Open Government Partnership** (OGP)
 
-Initialement fondé par 8 pays (Brésil, Indonésie, Mexique, Norvège, Philippines, Afrique du Sud, Royaume-Uni et États-Unis), le PGO en compte désormais 70, dont la France.
+Initialement fondé par 8 pays (Brésil, Indonésie, Mexique, Norvège, Philippines, Afrique du Sud, Royaume-Uni et États-Unis), le PGO en compte désormais 78, dont la France.
 
 ---
 ### Le .red[plan d'action national] pour la France
@@ -1374,6 +1385,18 @@ Une bonne stratégie consiste à réduire les frictions :
 * #### Rendre les portails attractifs à tous (et pas qu'aux développeurs web) 
 
 ]
+
+---
+### Les freins à l'ouverture des données
+
+* **Les coûts temporels et financiers** : extraction, anonymisation, hébergement des données, numérisation des œuvres ...  
+_Pour y palier : accompagner les opérateurs et évaluer les risques/bénéfices, fixer une feuille de route open data pour prioriser/rationnaliser._
+
+* **Une mise en qualité insuffisante** : une qualité jugée suffisante pour des usages internes pour lesquels elles sont produites peut être jugée insuffisante pour le grand public : fichiers incomplets, de mauvaise qualité ou avec des erreurs.  
+_Pour y palier : compter sur l’intelligence collective et l'interraction avec les usagers pour permettre l'amélioration des données (avec le crowdsourcing par exemple)._
+
+* **La crainte d'un mauvais usage** : quelques cas minoritaires de mauvaises réutilisations avec des données détournées de leur vrai sens une fois sorties de leur contexte.  
+_Pour y palier : renseigner les métadonnées qui accompagnent le jeu de données._
 
 ---
 
