--- a/jour1.Rmd
+++ b/jour1.Rmd
@@ -745,7 +745,7 @@ La loi **limite par décret les licences** qui peuvent être utilisées par les 
 
 Ces deux licences offrent **un choix aux administrations** : la licence ouverte étant plus permissive que la licence ODBL qui a été conçue dans une logique de "pot commun" permettant de garantir que les données resteront ouvertes après leur réutilisation.
 
-Utiliser une autre licence impose une **homologation** auprès de la DINSIC avec un exposé des motifs ayant conduit à sortir de la liste fixée dans le décret et une consultation des usagers affectés par la licence proposée. L'homologation doit être faite pour chaque jeu de données même si la licence reste la même.
+Utiliser une autre licence impose une **homologation** auprès de la DINUM avec un exposé des motifs ayant conduit à sortir de la liste fixée dans le décret et une consultation des usagers affectés par la licence proposée. L'homologation doit être faite pour chaque jeu de données même si la licence reste la même.
 
 ---
 
@@ -1011,9 +1011,7 @@ class: center, middle
 
 ### Le Palais national .red[de Taiwan]
 
-Entre 2015 et 2017, le Palais national de Taiwan, a ouvert 70 000 images sur une plate-forme dédiée National Palace Museum Open Data, qui permet de télécharger sans restriction des images d’œuvres et des jeux de données sur ses expositions. 
-
-Ceci a été réalisé au terme d’un grand projet de numérisation de ses collections et en lien avec la politique de gouvernement ouvert du pays.
+Entre 2015 et 2017, le Palais national de Taiwan, a ouvert 70 000 images sur une plate-forme dédiée National Palace Museum Open Data, qui permet de télécharger sans restriction des images d’œuvres et des jeux de données sur ses expositions. Ceci a été réalisé au terme d’un grand projet de numérisation de ses collections et en lien avec la politique de gouvernement ouvert du pays.
 
 .center[<img src="./img/Taiwan.png" height="250"/>]
 
