--- a/Jour2_version_2022.Rmd
+++ b/Jour2_version_2022.Rmd
@@ -377,6 +377,7 @@ Un exemple : .red[le standards des données des registres d'entrées d'archives]
 
 ![](./img/exercice_csv2.png)
 
+
 ---
 
 ### Étape 3 : .red[Diffuser et valoriser] les données
@@ -442,12 +443,41 @@ En complément des métadonnées, d'autres actions peuvent être menées :
 - Harmonisation des choix
 
 ![](img/voc_mismatch.png)
+---
+
+### Étape 3 : .red[Diffuser et valoriser] les données
+
+#### Choisir la bonne licence
+
+**Cas 1** :
+
+Mon institution souhaite respecter strictement le cadre légale. Quelle(s) licence(s) je lui recommande ?
 
 ---
 
 ### Étape 3 : .red[Diffuser et valoriser] les données
 
-#### 3.3 Utiliser la bonne plateforme de publication
+#### Choisir la bonne licence
+
+**Cas 2** :
+
+Mon institution souhaite favoriser la réutilisation des données et des contenus, mais elle dispose de très nombreuses données pour lesquelles des auteurs refusent les réutilisations commerciales. Quelle(s) licence(s) je lui recommande ?
+
+---
+
+### Étape 3 : .red[Diffuser et valoriser] les données
+
+#### Choisir la bonne licence
+
+**Cas 3** :
+
+Mon institution souhaite différencier les types de réutilisations (commerciales ou non) et mettre en place une redevance. Quelle(s) licence(s) je lui recommande ?
+
+---
+
+### Étape 3 : .red[Diffuser et valoriser] les données
+
+#### 3.4 Utiliser la bonne plateforme de publication
 
 .red[Le portail data.culture.gouv.fr]
 
@@ -465,7 +495,7 @@ via l'onglet « Contact » de la plateforme data.culture.gouv.fr.*
 
 ### Étape 3 : .red[Diffuser et valoriser] les données
 
-#### 3.3 Utiliser la bonne plateforme de publication
+#### 3.4 Utiliser la bonne plateforme de publication
 
 .red[Le portail data.gouv.fr]
 
