--- a/jour1.Rmd
+++ b/jour1.Rmd
@@ -397,13 +397,14 @@ class: inverse, center, middle
 
 ### Les .red[acteurs publics] de l'open data
 
-* **DINUM - Etalab** : Crée en 2011, la mission coordonne la politique d’ouverture et de partage des données publiques, et anime la plateforme nationale data.gouv.fr 
-* **DITP** : Expérimente l’intelligence artificielle dans les administrations avec Etalab et la DINSIC
-* **DINUM** : Soutient la diffusion de la culture numérique (utilisations des données, recours aux méthodes agiles) et la coopération avec la société civile et les écosystèmes innovants (open data, gouvernement ouvert). 
+* **DITP** 
+* **DINUM** 
+* **DINUM - Etalab** : Crée en 2011, la mission coordonne la politique d’ouverture et de partage des données publiques, et anime la plateforme nationale data.gouv.fr
 * **Mission Société Numérique de l'ANCT** : Structure les acteurs de l’accompagnement au numérique et les stratégies numériques des territoires, dont l'open data fait partie.
 
 Au ministère de la Culture :
-* **DIN** (Département de l'innovation numérique) : chargé d’identifier au ministère et dans les établissements culturels, les informations produites dans le cadre des missions de service public, de coordonner leur recensement, leur qualification, et la mise à disposition en données ouvertes qui ont vocation à être librement accessibles et gratuitement réutilisables. (*n’hésitez pas à le contacter pour toute question sur l'Open data*).
+* **Depnum** (Département du numérique pour la transformation des politiques culturelles et de l'administration des données) au sein du Service du numérique
+est chargé d’identifier au ministère et dans les établissements culturels, les informations produites dans le cadre des missions de service public, de coordonner leur recensement, leur qualification, et la mise à disposition en données ouvertes qui ont vocation à être librement accessibles et gratuitement réutilisables. (*n’hésitez pas à le contacter pour toute question sur l'Open data*).
 
 ---
 
@@ -491,10 +492,9 @@ class: center, middle
 
 .red[**2011**] : Le ministère s'engage dans la politique gouvernementale en faveur de l’ouverture et du partage des données publiques. Les premiers jeux de données sont publiés par le Ministère sur data.gouv.fr
 
-.red[**2013**] : Adoption de la première feuille de route « open data culturel »
+.red[**2013**] : Adoption de la première feuille de route « open data culturel ». Elle est mise à jour en [**2020**](https://www.culture.gouv.fr/Thematiques/Innovation-numerique/Actualites/Feuille-de-route-open-data2). Elle comporte 6 axes pour une stratégie numérique de diffusion et de réutilisation des données publiques numériques du secteur culturel.
 
 .red[**2014**] : La BnF ouvre ses métadonnées descriptives en "Licence Ouverte" 
-
 .red[**2014/2015**] : Publication de la feuille de route «Métadonnées culturelles et transition Web 3.0»
 
 .red[**2016**] : Ouverture du portail data.cuture.gouv.fr
@@ -509,7 +509,7 @@ class: center, middle
 
 ### La feuille de route **Données et contenus culturels**
 
-Cette [feuille de route](https://www.culture.gouv.fr/Espace-documentation/Documentation-administrative/Feuille-de-route-Donnees-et-contenus-culturels).
+Cette [feuille de route](https://www.culture.gouv.fr/Espace-documentation/Documentation-administrative/Feuille-de-route-Donnees-et-contenus-culturels). Elle concerne les données, les algorithmes et les codes sources.
 
 La publication des feuilles de route est le fruit d’une volonté politique renouvelée et portée par le Premier ministre qui s’est vu remettre le 23 décembre 2020 le rapport de la mission parlementaire présidée par Eric Bothorel et par la publication de la circulaire d'avril 2021 du Premier Ministre.
 
@@ -1307,25 +1307,30 @@ Une bonne stratégie consiste à réduire les frictions :
 
 ### Bibliographie
 
-* **Guide pratique dédié à l’ouverture des données publiques culturelles**
-Publié par le ministère de la Culture, juillet 2019, URL : http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Guide-pratique-dedie-a-l-ouverture-des-donnees-publiques-culturelles
+* [**Guide pratique dédié à l’ouverture des données publiques culturelles**](http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Guide-pratique-dedie-a-l-ouverture-des-donnees-publiques-culturelles)
+Publié par le ministère de la Culture, juillet 2019 
 
-* **Numérisation et valorisation des contenus culturels : guide ouverture et réutilisation des informations publiques numériques du secteur culturel**
-Publié par le ministère de la Culture, 2017, URL : http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Numerisation-et-valorisation-des-contenus-culturels-guide-ouverture-et-reutilisation-des-informations-publiques-numeriques-du-secteur-culturel
+* [**Outil pédagogique facilitant la compréhension des droits de propriété littéraire et artistique applicables aux contenus culturels dont la diffusion est souhaitée**](https://www.culture.gouv.fr/droitsdediffusion/) 
 
-* **Guide de bonnes pratiques en matière de propriété littéraire et artistique** Publié par le ministère de la Culture, 2017, URL : http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Guide-de-bonnes-pratiques-en-matiere-de-propriete-litteraire-et-artistique
+* [**Numérisation et valorisation des contenus culturels : guide ouverture et réutilisation des informations publiques numériques du secteur culturel**](http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Numerisation-et-valorisation-des-contenus-culturels-guide-ouverture-et-reutilisation-des-informations-publiques-numeriques-du-secteur-culturel),publié par le ministère de la Culture, 2017
+
+* [**Guide de bonnes pratiques en matière de propriété littéraire et artistique**](http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Guide-de-bonnes-pratiques-en-matiere-de-propriete-litteraire-et-artistique), publié par le ministère de la Culture, 2017
+
+* [**Rapport "Ouverture et partage des données publiques culturelles"**](https://www.culture.gouv.fr/content/download/94768/file/201312_Rapport_Open_Data_Culturel.pdf), publié par le ministère de la Culture, décembre 2013
 
 ---
 
 ### Bibliographie
 
-* **Retour d'expérience sur la mise en ligne des collections du musée de Bretagne**(https://musee-devoile.blog/wp-content/uploads/2021/05/fiches_juridiques_musee_de_bretagne.pdf)
+* [**Rapport open content dans les institutions culturelles en France**](https://upload.wikimedia.org/wikipedia/commons/9/94/Rapport_sur_l%E2%80%99open_content_dans_les_institutions_culturelles_en_France_-_%C3%89tat_des_lieux_des_pratiques_num%C3%A9riques_et_d%E2%80%99ouverture_de_contenus.pdf), Wikimédia, 2022
 
-* **Penser demain, L’Open Innovation dans les Musées & Institutions Culturelles**, l'ICART (https://www.icart.fr/actualites/elaboration-dun-livre-blanc-sur-lopen-innovation)
+* [**Retour d'expérience sur la mise en ligne des collections du musée de Bretagne**](https://musee-devoile.blog/wp-content/uploads/2021/05/fiches_juridiques_musee_de_bretagne.pdf)
 
-* **Guide pratique pour la recherche et la réutilisation des images d’œuvres d’art**, INHA (https://www.inha.fr/fr/actualites/actualites-de-l-inha/en-2021/guide-pratique-pour-la-recherche-et-la-reutilisation-des-images-d-uvres-d-art.html)
+* [**Penser demain, L’Open Innovation dans les Musées & Institutions Culturelles**](https://www.icart.fr/actualites/elaboration-dun-livre-blanc-sur-lopen-innovation), l'ICART 
 
-* **Droits des images, histoire de l’art et société**, INHA (https://www.inha.fr/_attachments/de-nouvelles-democraties-du-savoir-actualite/rapport_images_usages221018.pdf)
+* [**Guide pratique pour la recherche et la réutilisation des images d’œuvres d’art**](https://www.inha.fr/fr/actualites/actualites-de-l-inha/en-2021/guide-pratique-pour-la-recherche-et-la-reutilisation-des-images-d-uvres-d-art.html), INHA
+
+* [**Droits des images, histoire de l’art et société**](https://www.inha.fr/_attachments/de-nouvelles-democraties-du-savoir-actualite/rapport_images_usages221018.pdf)
 ---
 
 class: inverse, center, middle
